fix offset when scrollbar showing

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -30,6 +30,7 @@ body {
 
 html {
     scroll-behavior: smooth;
+    scrollbar-gutter: stable;
 }
 
 h1,
